fix TRUSTe logo cut off on sign up page

--- a/tapjoyads/app/assets/stylesheets/marketplace/theme/tjm/login_form.scss
+++ b/tapjoyads/app/assets/stylesheets/marketplace/theme/tjm/login_form.scss
@@ -17,7 +17,7 @@
   position: absolute;
   top: 0; left: 0;
   width: 100%; height: 100%;
-  overflow: hidden;
+  overflow: auto;
   z-index: 999;
 
   a, a:visited {
